# TDD-Learning

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy.yml  docs.yml
01_tdd_basics/: index.html
02_environment_setup/: index.html
03_red_green_refactor/: index.html
04_python_testing_basics/: index.html
05_unittest/: index.html
06_pytest/: index.html
07_practical_examples/: index.html
08_mocking/: index.html
09_integration_testing/: index.html
10_web_development_tdd/: index.html
11_advanced_tdd/: index.html
12_best_practices/: index.html
13_tools_frameworks/: index.html
14_ci_cd_automation/: index.html
15_error_handling_tdd/: index.html
16_code_coverage_metrics/: index.html
17_legacy_code_strategies/: index.html
18_advanced_mocking/: index.html
19_tdd_architecture/: index.html
IMPROVEMENTS_COMPLETED/: index.html
IMPROVEMENTS_FROM_ARCHITECTURE_REPO/: index.html
INTERACTIVE_EXERCISES_GUIDE/: index.html
VIDEO_TUTORIALS_GUIDE/: index.html
assets/README_ICONS/: index.html
assets/css/: exercise.css  quiz.css
conclusion/: index.html
docs/: 00_introduction.md  01_tdd_basics.md  02_environment_setup.md  03_red_green_refactor.md  04_python_testing_basics.md  05_unittest.md  06_pytest.md  07_practical_examples.md  08_mocking.md  09_integration_testing.md  10_web_development_tdd.md  11_advanced_tdd.md  12_best_practices.md  13_tools_frameworks.md  14_ci_cd_automation.md  14_conclusion.md  15_error_handling_tdd.md  16_code_coverage_metrics.md  17_legacy_code_strategies.md  18_advanced_mocking.md  19_tdd_architecture.md  20_conclusion.md  IMPROVEMENTS_COMPLETED.md  IMPROVEMENTS_FROM_ARCHITECTURE_REPO.md  INTERACTIVE_EXERCISES_GUIDE.md  VIDEO_TUTORIALS_GUIDE.md  conclusion.md  favicon.html  index.md  site.webmanifest
docs/assets/: README_ICONS.md  icon-generator.py
docs/assets/js/: pyodide-exercise.js  quiz.js
docs/curriculum/module-01-solid/: 01-introduction.md  02-single-responsibility.md  03-open-closed.md  04-liskov-substitution.md  05-interface-segregation.md  06-dependency-inversion.md  07-solid-in-practice.md  08-real-world-examples.md
docs/curriculum/module-02-patterns/: 01-patterns-introduction.md  02-creational-patterns.md  03-structural-patterns.md  04-behavioral-patterns-1.md  05-behavioral-patterns-2.md  06-patterns-application.md  07-real-world-patterns.md  08-patterns-practice.md  09-patterns-refactoring.md
docs/curriculum/module-03-architecture/: 01-architecture-overview.md  (+5 more)
docs/exercises/: 01_tdd_basics.md  03_string_validator.md  07_banking_system.md  08_mocking_email_service.md  10_flask_api_tdd.md  README.md
exercises/: index.html
exercises/module-01-tdd-basics/: index.html
exercises/module-02-unittest/: index.html
exercises/module-03-pytest/: index.html
search/: search_index.json
stylesheets/: extra.css
(+24 files in other folders)
