[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdd-learning"
version = "1.0.0"
description = "Полный курс по Test-Driven Development (TDD) на Python"
authors = [
    { name = "AI Assistant", email = "assistant@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = []

[project.urls]
Homepage = "https://github.com/your-username/TDD-Learning"
Documentation = "https://your-username.github.io/TDD-Learning"