[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdd-learning"
version = "1.0.0"
description = "Полный курс по Test-Driven Development (TDD) на Python"
authors = [
    { name = "AI Assistant", email = "assistant@example.com" }
]

requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.3.9",
    "mypy>=1.17.1",
    "pillow>=11.3.0",
    "ruff>=0.12.11",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-macros-plugin>=1.0.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["docs"]

[project.urls]
Homepage = "https://github.com/tdd-learning/tdd-learning"
Documentation = "https://tdd-learning.github.io/tdd-learning"
