[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "architecture-and-patterns"
version = "2.0.0"
description = "Полный курс по принципам СОЛИД, архитектуре и паттернам проектирования"
authors = [
    { name = "Ravil Shakerov", email = "xellaopromaster@yandex.ru" }
]

requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocs-macros-plugin>=1.5.0",
    "pymdown-extensions>=10.17.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mypy>=1.18.2",
    "pillow>=12.0.0",
    "ruff>=0.14.5",
    "bleach>=6.3.0",
    "sqlalchemy>=2.0.44",
    "fastapi>=0.121.2",
    "pydantic>=2.12.4",
    "bcrypt>=5.0.0",
    "jwt>=1.4.0",
    "slowapi>=0.1.9",
    "zxcvbn>=4.5.0",
    "dotenv>=0.9.9",
]

[tool.hatch.build.targets.wheel]
packages = ["docs"]

[project.urls]
Homepage = "https://github.com/architecture-and-patterns/course"
Documentation = "https://architecture-and-patterns.github.io/"

[tool.mypy]
exclude = [
    "^site/",
]
